set max-width 100% to fix text overflow issue. Closes #35

--- a/src/scss/components/_callout-group-item.scss
+++ b/src/scss/components/_callout-group-item.scss
@@ -19,6 +19,7 @@
 .callout-group-item__header {
   @include media(sm) {
     flex: 1;
+    max-width: 100%;
   }
 }
 
